looks like something that works

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 </head>
 <body>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ember.js/1.0.0/ember.min.js"></script>
-	<script type="text/javascript" src="/js/app.js?t=1380560144000"></script>
-	<script type="text/javascript" src="/js/config.js?t=1380560144000"></script>
+	<script type="text/javascript" src="/js/app.js?t=1380589779000"></script>
+	<script type="text/javascript" src="/js/config.js?t=1380586453000"></script>
 
-	<script type="text/javascript" src="/js/templates.js?t=1380562098000"></script>
+	<script type="text/javascript" src="/js/templates.js?t=1380589786000"></script>
 
-	<script type="text/javascript" src="/js/controllers/index.js?t=1380561164000"></script>
+	<script type="text/javascript" src="/js/controllers/index.js?t=1380586237000"></script>
 
-	<script type="text/javascript" src="/js/models/index.js"></script>
-	<script type="text/javascript" src="/js/models/person.js"></script>
+	<script type="text/javascript" src="/js/models/index.js?t=1380563935000"></script>
+	<script type="text/javascript" src="/js/models/person.js?t=1380568909000"></script>
+	<script type="text/javascript" src="/js/models/section.js?t=1380569682000"></script>
+	<script type="text/javascript" src="/js/models/skill.js?t=1380570481000"></script>
+	<script type="text/javascript" src="/js/models/employer.js?t=1380579493000"></script>
+	<script type="text/javascript" src="/js/models/education.js?t=1380580273000"></script>
+	<script type="text/javascript" src="/js/models/project.js?t=1380586197000"></script>
 </body>
 </html>
+
